delete tweet method
