# src/controllers/tweets.controllers.ts
@@ -1,12 +1,9 @@
 import { config } from 'dotenv'
 import { Response, Request, NextFunction } from 'express'
 import { ParamsDictionary } from 'express-serve-static-core'
-import { ObjectId } from 'mongodb'
 import { TweetType } from '~/constants/enums'
-import HTTP_STATUS from '~/constants/httpStatus'
 import { TWEETS_MESSAGES, USERS_MESSAGES } from '~/constants/messages'
 import { TweetRequestBody } from '~/models/requests/Tweet.requests'
-import databaseService from '~/services/database.services'
 import TweetsService from '~/services/tweets.services'
 config()
 export const createTweetController = async (req: Request<ParamsDictionary, any, TweetRequestBody>, res: Response) => {
@@ -34,6 +31,13 @@ export const getTweetController = async (req: Request, res: Response) => {
   })
 }
 
+export const deleteTweetController = async (req: Request, res: Response) => {
+  const { tweet }: any = req
+  const { decoded_authorization }: any = req
+  const { userId }: any = decoded_authorization
+  const result = await TweetsService.deleteTweet(userId, tweet)
+  res.json(result)
+}
 export const getTweetChildrenController = async (req: Request, res: Response) => {
   const { tweet }: any = req
   const { decoded_authorization }: any = req
